Reajuste de diseños

--- a/app/src/main/res/layout/cardview_registrar_consumos.xml
+++ b/app/src/main/res/layout/cardview_registrar_consumos.xml
@@ -45,11 +45,12 @@
 
                 <TextView
                     android:id="@+id/tvNombreRegCons"
-                    android:layout_width="match_parent"
+                    android:maxWidth= "150dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Nombre Producto"
                     android:textColor="@color/black"
-                    android:textSize="24sp"
+                    android:textSize="21sp"
                     android:textStyle="bold" />
 
                 <TextView
