--- a/app/src/main/res/layout/cardview_inventario_mb.xml
+++ b/app/src/main/res/layout/cardview_inventario_mb.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:contentPadding="5dp"
+    app:contentPadding="4dp"
     app:rippleColor="@android:color/transparent"
     app:cardCornerRadius="20dp"
     app:cardElevation="4dp"
@@ -18,12 +18,16 @@
         <TextView
             android:id="@+id/tvNombreMB"
             android:layout_width="wrap_content"
-            android:layout_height="50dp"
+            android:layout_height="wrap_content"
+            android:layout_above="@id/linear2"
             android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_toLeftOf="@id/linear1"
             android:gravity="center_vertical"
+            android:maxWidth="200dp"
             android:text="Nombre Producto"
             android:textColor="@color/black"
-            android:textSize="18sp" />
+            android:textSize="17sp" />
 
         <LinearLayout
             android:id="@+id/linear1"
@@ -76,15 +80,18 @@
 
         <TextView
             android:layout_width="wrap_content"
-            android:layout_height="50dp"
-            android:layout_marginTop="5dp"
+            android:layout_height="wrap_content"
             android:layout_below="@id/tvNombreMB"
+            android:layout_alignBaseline="@id/linear2"
+            android:layout_alignBottom="@id/linear2"
+            android:layout_alignParentStart="true"
             android:gravity="center"
             android:text="Cantidad Mínima"
             android:textColor="@color/black"
             android:textSize="17sp" />
 
         <LinearLayout
+            android:id="@+id/linear2"
             android:layout_below="@+id/linear1"
             android:layout_alignParentRight="true"
             android:layout_width="wrap_content"
