--- a/app/src/main/res/layout/cardview_lista_recyclerview.xml
+++ b/app/src/main/res/layout/cardview_lista_recyclerview.xml
@@ -31,27 +31,18 @@
                 android:paddingLeft="14dp"
                 android:paddingRight="14dp" />
 
-            <LinearLayout
-                android:id="@+id/rlContenidoRecyclerView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="15dp"
-                android:layout_toEndOf="@+id/ivIconoRecyclerView"
-                android:orientation="vertical"
-                android:layout_marginLeft="2dp"
-                android:layout_toRightOf="@+id/ivIconoRecyclerView">
 
-                <TextView
-                    android:id="@+id/tvNombreRecyclerView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Nombre ITEM"
-                    android:textColor="@color/black"
-                    android:textSize="24sp"
-                    android:textStyle="bold" />
-            </LinearLayout>
+            <TextView
+                android:id="@+id/tvNombreRecyclerView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="5dp"
+                android:layout_toRightOf="@id/ivIconoRecyclerView"
+                android:text="Nombre ITEM"
+                android:textColor="@color/black"
+                android:textSize="19sp"
+                android:textStyle="bold" />
 
         </RelativeLayout>
 
