--- a/app/src/main/res/layout/cardview_seleccionar_habitacion_admi.xml
+++ b/app/src/main/res/layout/cardview_seleccionar_habitacion_admi.xml
@@ -44,10 +44,11 @@
                 <TextView
                     android:id="@+id/tvNombreHabitacionGH"
                     android:layout_width="wrap_content"
+                    android:maxWidth="250dp"
                     android:layout_height="wrap_content"
                     android:text="Nombre Habitación"
                     android:textColor="@color/black"
-                    android:textSize="24sp"
+                    android:textSize="19sp"
                     android:textStyle="bold" />
 
                 <TextView
