--- a/app/src/main/res/layout/cardview_seleccionar_producto.xml
+++ b/app/src/main/res/layout/cardview_seleccionar_producto.xml
@@ -45,10 +45,11 @@
 
                 <TextView
                     android:id="@+id/tvNombreProductoSEP"
+                    android:maxWidth="240dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Nombre ITEM"
-                    android:textSize="22sp"
+                    android:textSize="18sp"
                     android:textColor="@color/black"
                     android:textStyle="bold" />
 
@@ -69,9 +70,9 @@
                 android:layout_alignRight="@id/linearLayoutSEP"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
-                android:textColor="@color/black"
                 android:layout_marginRight="3dp"
                 android:text="$0.00"
+                android:textColor="@color/black"
                 android:textSize="16sp" />
 
         </RelativeLayout>
