--- a/app/src/main/res/layout/activity_confirmar_detalle_producto.xml
+++ b/app/src/main/res/layout/activity_confirmar_detalle_producto.xml
@@ -91,6 +91,24 @@
                 android:textSize="18sp" />
 
             <TextView
+                android:id="@+id/tvCantidadMinCDP"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="15dp"
+                android:text="TextView"
+                android:textColor="@color/black"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/tvCantidadMaxCDP"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="15dp"
+                android:text="TextView"
+                android:textColor="@color/black"
+                android:textSize="18sp" />
+
+            <TextView
                 android:id="@+id/tvEstadoCDP"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
