--- a/app/src/main/res/layout/activity_adicionar_productos.xml
+++ b/app/src/main/res/layout/activity_adicionar_productos.xml
@@ -272,29 +272,27 @@
                     </LinearLayout>
                 </LinearLayout>
 
-                <TextView
-                    android:layout_width="wrap_content"
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/tilImagenAP"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_margin="5dp"
-                    android:text="Imagen del Producto"
-                    android:textColor="@color/black"
-                    android:textSize="18sp" />
-                <Button
-                    android:id="@+id/btnCargarImagenAP"
-                    style="@style/Widget.Material3.Button.OutlinedButton"
-                    android:layout_width="200dp"
-                    android:layout_height="50dp"
-                    android:layout_gravity="center"
-                    android:drawableLeft="@drawable/ic_icono_cargar_imagen"
-                    android:drawableTint="@color/azul"
-                    android:textColor="@color/azul"
-                    android:gravity="center"
-                    android:text="Cargar Imagen"
-                    android:textSize="18sp"
-                    app:strokeColor="@color/azul"
-                    app:rippleColor="@color/azulVerde">
-                </Button>
+                    android:layout_margin="15dp"
+                    android:hint="Imagen URL"
+                    app:boxStrokeColor="@color/azul"
+                    app:hintTextColor="@color/azul">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/edtImagenAP"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:drawableStart="@drawable/ic_icono_imagen"
+                        android:drawablePadding="7dp"
+                        android:drawableTint="@color/azul"
+                        android:inputType=""
+                        android:textColor="@color/azulOscuro"
+                        android:textSize="18sp" />
+                </com.google.android.material.textfield.TextInputLayout>
 
                 <Button
                     android:id="@+id/btnSiguienteAP"
