--- a/app/src/main/res/layout/cardview_ver_existencias.xml
+++ b/app/src/main/res/layout/cardview_ver_existencias.xml
@@ -24,6 +24,7 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
+                android:textStyle="bold"
                 android:text="Nombre Producto"
                 android:textColor="@color/black"
                 android:textSize="18sp" />
