--- a/app/src/main/res/layout/activity_gestionar_inventarios.xml
+++ b/app/src/main/res/layout/activity_gestionar_inventarios.xml
@@ -128,6 +128,7 @@
         </com.google.android.material.card.MaterialCardView>
 
         <com.google.android.material.card.MaterialCardView
+            android:visibility="gone"
             android:id="@+id/cvEditarInventarios"
             android:layout_width="350dp"
             android:layout_height="60dp"
