--- a/app/src/main/res/layout/activity_seleccionar_reporte_cons.xml
+++ b/app/src/main/res/layout/activity_seleccionar_reporte_cons.xml
@@ -68,10 +68,76 @@
                 />
         </com.google.android.material.textfield.TextInputLayout>
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rvSeleccionarReporteCons"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="50dp"
+            android:layout_marginTop="20dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tvFechaD"
+                android:layout_width="150dp"
+                android:layout_height="match_parent"
+                android:fontFamily="sans-serif"
+                android:text="Desde:"
+                android:textAlignment="center"
+                android:textColor="#070707"
+                android:textSize="22sp" />
+
+            <EditText
+                android:id="@+id/edtFechDesdeCnsm"
+                android:layout_width="250dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="Seleccionar Fecha"
+                android:fontFamily="sans-serif"
+                android:textAlignment="center"
+                android:textColor="#070707"
+                android:textSize="20sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginTop="20dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tvFechaP"
+                android:layout_width="150dp"
+                android:layout_height="match_parent"
+                android:fontFamily="sans-serif"
+                android:text="Hasta"
+                android:textAlignment="center"
+                android:textColor="#070707"
+                android:textSize="22sp" />
+
+            <EditText
+                android:id="@+id/edtFechHastaCnsm"
+                android:layout_width="250dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="Seleccionar Fecha"
+                android:fontFamily="sans-serif"
+                android:textAlignment="center"
+                android:textColor="#070707"
+                android:textSize="20sp" />
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/btnConfRepCsm"
+            style="@style/Widget.Material3.Button"
+            android:layout_width="200dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:layout_margin="15dp"
+            android:backgroundTint="@color/azul"
+            android:text="Generar Reporte"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:rippleColor="@color/azulVerde" />
 
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
