--- a/app/src/main/res/layout/activity_detalle_reporte_cons.xml
+++ b/app/src/main/res/layout/activity_detalle_reporte_cons.xml
@@ -48,11 +48,11 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/tv_nombreDetalleCons"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="20dp"
-                android:text="Detalle de consumo"
                 android:textColor="@color/azulOscuro"
                 android:textSize="23sp"
                 android:textStyle="bold" />
