--- a/app/src/main/res/layout/activity_actualizar_productos.xml
+++ b/app/src/main/res/layout/activity_actualizar_productos.xml
@@ -50,7 +50,7 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_gravity="center"
-            android:layout_marginTop="30dp"
+            android:layout_margin="15dp"
             android:text="Actualizar datos de producto"
             android:textColor="@color/azulOscuro"
             android:textSize="23sp"
@@ -283,13 +283,15 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:text="Imagen del Producto"
+                    android:layout_marginBottom="7dp"
                     android:textColor="@color/black"
                     android:textSize="18sp" />
 
                 <ImageView
                     android:id="@+id/ivImagenProductoACP"
-                    android:layout_width="match_parent"
-                    android:layout_height="100dp"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_width="200dp"
+                    android:layout_height="200dp"
                     android:layout_marginLeft="15dp"
                     android:layout_marginRight="15dp"
                     android:background="@color/azulVerde">
