--- a/app/src/main/res/layout/activity_adicionar_habitacion.xml
+++ b/app/src/main/res/layout/activity_adicionar_habitacion.xml
@@ -45,7 +45,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="30dp"
+            android:layout_margin="15dp"
             android:text="Registro de nueva habitación"
             android:textColor="@color/azulOscuro"
             android:textSize="23sp"
