--- a/app/src/main/res/layout/activity_confirmar_detalle_producto.xml
+++ b/app/src/main/res/layout/activity_confirmar_detalle_producto.xml
@@ -8,142 +8,153 @@
     tools:context=".Vista.Administrador.GestionProductos.ConfirmarDetalleProducto">
 
 
-
-    <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/appbarCDP"
+    <LinearLayout
+        android:orientation="vertical"
+        app:layout_constraintTop_toTopOf="parent"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_height="wrap_content">
 
-        <com.google.android.material.appbar.MaterialToolbar
+        <com.google.android.material.appbar.AppBarLayout
+            android:id="@+id/appbarCDP"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/azulPalido">
+            android:layout_height="50dp">
 
-            <Button
-                android:id="@+id/btnRegresarCDP"
-                style="@style/Widget.Material3.Button.TextButton"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:drawableLeft="@drawable/ic_icono_regresar"
-                android:drawableTint="@color/azulOscuro"
-                app:rippleColor="@color/azulClaro" />
+            <com.google.android.material.appbar.MaterialToolbar
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/azulPalido">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Detalle"
-                android:textSize="20sp"
-                android:textColor="@color/azulOscuro" />
-        </com.google.android.material.appbar.MaterialToolbar>
+                <Button
+                    android:id="@+id/btnRegresarCDP"
+                    style="@style/Widget.Material3.Button.TextButton"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:drawableLeft="@drawable/ic_icono_regresar"
+                    android:drawableTint="@color/azulOscuro"
+                    app:rippleColor="@color/azulClaro" />
 
-    </com.google.android.material.appbar.AppBarLayout>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Detalle"
+                    android:textSize="20sp"
+                    android:textColor="@color/azulOscuro" />
+            </com.google.android.material.appbar.MaterialToolbar>
 
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/appbarCDP"
-        android:layout_marginTop="30dp"
-        android:layout_margin="15dp"
-        app:cardElevation="5dp">
+        </com.google.android.material.appbar.AppBarLayout>
 
-        <LinearLayout
+
+        <TextView
+            android:id="@+id/tvEnunciadoCDP"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="15dp"
+            android:layout_gravity="center_horizontal"
+            android:text="TextView"
+            android:textColor="@color/azulOscuro"
+            android:textSize="23sp"
+            android:textStyle="bold" />
+
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/tvEnunciadoCDP"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:gravity="center_horizontal"
-                android:text="TextView"
-                android:textColor="@color/azulOscuro"
-                android:textSize="23sp"
-                android:textStyle="bold" />
+                android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/tvNombreCDP"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="15dp"
-                android:text="TextView"
-                android:textColor="@color/black"
-                android:textSize="18sp" />
+                    <com.google.android.material.card.MaterialCardView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="15dp"
+                        app:cardElevation="4dp">
 
-            <TextView
-                android:id="@+id/tvCategoriaCDP"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="15dp"
-                android:text="TextView"
-                android:textColor="@color/black"
-                android:textSize="18sp" />
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/tvPrecioCDP"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="15dp"
-                android:text="TextView"
-                android:textColor="@color/black"
-                android:textSize="18sp" />
+                            <TextView
+                                android:id="@+id/tvNombreCDP"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_margin="15dp"
+                                android:text="TextView"
+                                android:textColor="@color/black"
+                                android:textSize="18sp" />
 
-            <TextView
-                android:id="@+id/tvCantidadMinCDP"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="15dp"
-                android:text="TextView"
-                android:textColor="@color/black"
-                android:textSize="18sp" />
+                            <TextView
+                                android:id="@+id/tvCategoriaCDP"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_margin="15dp"
+                                android:text="TextView"
+                                android:textColor="@color/black"
+                                android:textSize="18sp" />
 
-            <TextView
-                android:id="@+id/tvCantidadMaxCDP"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="15dp"
-                android:text="TextView"
-                android:textColor="@color/black"
-                android:textSize="18sp" />
+                            <TextView
+                                android:id="@+id/tvPrecioCDP"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_margin="15dp"
+                                android:text="TextView"
+                                android:textColor="@color/black"
+                                android:textSize="18sp" />
 
-            <TextView
-                android:id="@+id/tvEstadoCDP"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="15dp"
-                android:text="TextView"
-                android:textColor="@color/black"
-                android:textSize="18sp" />
+                            <TextView
+                                android:id="@+id/tvCantidadMinCDP"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_margin="15dp"
+                                android:text="TextView"
+                                android:textColor="@color/black"
+                                android:textSize="18sp" />
 
-            <ImageView
-                android:id="@+id/ivImagenProductoCDP"
-                android:layout_width="match_parent"
-                android:layout_height="100dp"
-                android:layout_margin="15dp"
-                android:background="@color/azulVerde">
-            </ImageView>
+                            <TextView
+                                android:id="@+id/tvCantidadMaxCDP"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_margin="15dp"
+                                android:text="TextView"
+                                android:textColor="@color/black"
+                                android:textSize="18sp" />
 
-        </LinearLayout>
+                            <TextView
+                                android:id="@+id/tvEstadoCDP"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_margin="15dp"
+                                android:text="TextView"
+                                android:textColor="@color/black"
+                                android:textSize="18sp" />
 
-    </androidx.cardview.widget.CardView>
+                            <ImageView
+                                android:id="@+id/ivImagenProductoCDP"
+                                android:layout_gravity="center_horizontal"
+                                android:layout_width="200dp"
+                                android:layout_height="200dp"
+                                android:layout_marginBottom="7dp"
+                                android:background="@color/azulVerde">
+                            </ImageView>
+                        </LinearLayout>
+                    </com.google.android.material.card.MaterialCardView>
 
+                <Button
+                    android:id="@+id/btnConfirmarCDP"
+                    style="@style/Widget.Material3.Button"
+                    android:layout_width="200dp"
+                    android:layout_height="50dp"
+                    android:layout_gravity="center"
+                    android:layout_margin="15dp"
+                    android:backgroundTint="@color/azul"
+                    android:text="Confirmar"
+                    android:textSize="18sp"
+                    android:visibility="visible"
+                    app:rippleColor="@color/azulVerde" />
 
-    <Button
-        android:id="@+id/btnConfirmarCDP"
-        style="@style/Widget.Material3.Button"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
-        android:layout_gravity="center"
-        android:layout_margin="15dp"
-        android:backgroundTint="@color/azul"
-        android:text="Confirmar"
-        android:textSize="18sp"
-        android:visibility="visible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:rippleColor="@color/azulVerde" />
+            </LinearLayout>
+        </ScrollView>
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
