--- a/app/src/main/res/layout/activity_seleccionar_habitacion_em.xml
+++ b/app/src/main/res/layout/activity_seleccionar_habitacion_em.xml
@@ -43,10 +43,10 @@
 
         <TextView
             android:id="@+id/tvSeleccionarSH"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="15dp"
-            android:gravity="center"
+            android:layout_gravity="center"
             android:text="Seleccione la Habitación"
             android:textColor="@color/azulOscuro"
             android:textSize="23sp"
