--- a/app/src/main/res/layout/activity_seleccionar_producto.xml
+++ b/app/src/main/res/layout/activity_seleccionar_producto.xml
@@ -41,11 +41,11 @@
 
         <TextView
             android:id="@+id/tvEnunciadoSP"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="15dp"
             android:textStyle="bold"
-            android:gravity="center"
+            android:layout_gravity="center"
             android:text="ENUNCIADO"
             android:textColor="@color/azulOscuro"
             android:textSize="23sp" />
