--- a/app/src/main/res/layout/activity_seleccionar_usuario.xml
+++ b/app/src/main/res/layout/activity_seleccionar_usuario.xml
@@ -49,8 +49,7 @@
             android:text="TextView"
             android:textColor="@color/azulOscuro"
             android:textSize="23sp"
-            android:textStyle="bold"
-            tools:layout_editor_absoluteX="411dp" />
+            android:textStyle="bold" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvSeleccionarUsuarioSU"
