--- a/app/src/main/res/layout/activity_ver_existencias.xml
+++ b/app/src/main/res/layout/activity_ver_existencias.xml
@@ -67,17 +67,17 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
-                android:textSize="18sp"
                 android:text="Producto"
-                android:textColor="@color/black" />
+                android:textColor="@color/black"
+                android:textSize="18sp" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/black"
                 android:layout_alignParentRight="true"
-                android:textSize="16sp"
-                android:text="Cantidad" />
+                android:text="Cantidad"
+                android:textColor="@color/black"
+                android:textSize="16sp" />
 
         </RelativeLayout>
 
