--- a/app/src/main/res/layout/cardview_seleccionar_habitacion_admi.xml
+++ b/app/src/main/res/layout/cardview_seleccionar_habitacion_admi.xml
@@ -36,7 +36,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+                android:layout_centerVertical="true"
                 android:layout_toEndOf="@id/ivIconoHabitacionGH"
                 android:layout_marginStart="8dp"
                 android:orientation="vertical">
@@ -48,7 +48,7 @@
                     android:layout_height="wrap_content"
                     android:text="Nombre Habitación"
                     android:textColor="@color/black"
-                    android:textSize="19sp"
+                    android:textSize="18sp"
                     android:textStyle="bold" />
 
                 <TextView
